refactor(component): change blog logo style

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -32,7 +32,8 @@ const { activeNav } = Astro.props;
             >
               {SITE.title}
             </a>
-            <a href="/" class="px-2 text-sm hover:text-skin-accent">
+            |
+            <a href="/" class="px-2 text-2xl uppercase hover:text-skin-accent">
               blog
             </a>
           </div>
