feat: add clear field button to search form

--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -123,6 +123,12 @@
   pre > code {
     white-space: pre;
   }
+
+  @media (hover: hover) {
+    .clear-button {
+      @apply hover:text-skin-accent;
+    }
+  }
 }
 
 @layer components {
