--- a/src/components/Favicon.astro
+++ b/src/components/Favicon.astro
@@ -1,9 +1,10 @@
 <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 
 <script>
-  const favicon = document.querySelector('link[rel="icon"]')!;
   document.addEventListener("visibilitychange", () => {
+    const favicon = document.querySelector('link[rel="icon"]')!;
     const hidden = document.hidden;
+    console.log(hidden, favicon);
     favicon.setAttribute("href", `/favicon${hidden ? "-hidden" : ""}.svg`);
   });
 </script>
